container/kustomize/sample-kustomization/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-toolkit
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: devops-toolkit
spec:
  rules:
    - host: kustomize.devopstoolkitseries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-toolkit
                port:
                  number: 80
